<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

   	<TextView 
    	android:id="@+id/stop_watch_label_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/egg_shell"
        android:gravity="center_horizontal"
        android:textColor="@color/indigo"
        android:textSize="@dimen/main_banner_text_dimension"
        android:text="@string/stop_watch_title_string" />
    
    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/stop_watch_label_text_view"
        android:textSize="20pt"
        android:textColor="#ffffff"
      	android:gravity="center_horizontal"
      	android:background="@drawable/rounded_view"/>
    
    
    <LinearLayout
        android:id="@+id/chrono_button_linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/chronometer"
        android:orientation="horizontal"
        android:gravity="center_horizontal" >
        
	    <Button
	        android:id="@+id/chrono_start_button"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/chrono_start_button_string" />
	    
	    <Button 
	        android:id="@+id/chrono_stop_button"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/chrono_stop_button_string" />
	    
	    <Button
	        android:id="@+id/chrono_reset_button"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/chrono_reset_button_string" />
    </LinearLayout>
    
    
    <ScrollView 
        android:id="@+id/elapsed_time_scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/chrono_button_linear_layout"
        android:fillViewport="true"
        android:background="@drawable/rounded_view" >
        
        <LinearLayout
            android:id="@+id/lap_time_linear_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:orientation="vertical">
                       
        </LinearLayout>

    </ScrollView>
    
    <Button 
        android:id="@+id/chrono_lap_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/elapsed_time_scroll_view"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/chrono_lap_button_string" />

</RelativeLayout>
