<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <com.SDRockstarStudios.stopwatch.Chrono
        android:id="@+id/chronometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chrono_format_string"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_view_large"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="@dimen/chronometer_text_height" />
    
    <LinearLayout
        android:id="@+id/chrono_button_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chronometer"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/chrono_start_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_view_large"
            android:text="@string/chrono_start_button_string"
            android:textSize="@dimen/button_height"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/chrono_stop_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_view_large"
            android:text="@string/chrono_stop_button_string"
            android:textSize="@dimen/button_height"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/chrono_reset_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_view_large"
            android:text="@string/chrono_reset_button_string"
            android:textSize="@dimen/button_height"            
            android:textColor="@color/black" />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/lap_label_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chrono_button_linear_layout"
        android:baselineAligned="false"
        android:orientation="horizontal">
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lap_label_layout"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <fragment 
            android:id="@+id/lap_fragment"
            android:name="com.SDRockstarStudios.stopwatch.LapFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frag_height"
            android:layout_weight="1" />
        <fragment 
            android:id="@+id/elapsed_fragment"
            android:name="com.SDRockstarStudios.stopwatch.ElapsedFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frag_height"
            android:layout_weight="1" />          
    </LinearLayout>
    
	 <Button
        android:id="@+id/chrono_lap_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_layout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_view_large"
        android:text="@string/chrono_lap_button_string"
        android:textSize="@dimen/button_height"
        android:textColor="@color/black" />
	    
</RelativeLayout>
